--- a/06-Code/CodeProject/nbproject/project.properties
+++ b/06-Code/CodeProject/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=CodeProject
-main.class=codeproject.CodeProject
+main.class=ec.edu.espe.codeproject.view.SimulatorDisplay
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
