--- a/06-Code/ViveresPedroSystem/nbproject/project.properties
+++ b/06-Code/ViveresPedroSystem/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=CodeProject
+application.title=ViveresPedroSystem
 application.vendor=DANIELA
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/CodeProject.jar
+dist.jar=${dist.dir}/ViveresPedroSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/CodeProject
+dist.jlink.output=${dist.jlink.dir}/ViveresPedroSystem
 endorsed.classpath=
 excludes=
 includes=**
@@ -72,7 +72,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=CodeProject
+jlink.launcher.name=ViveresPedroSystem
 main.class=ec.edu.espe.codeproject.view.ViveresPedro
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
