--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /06-Code/CodeProject/dist/
 /06-Code/ViveresPedroSystem/nbproject/private/
 /06-Code/ViveresPedroSystem/build/
+/06-Code/ViveresPedroSystem V2/build/
+/06-Code/ViveresPedroSystem V2/nbproject/private/
