--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /06-Code/ViveresPedroSystem/build/
 /06-Code/ViveresPedroSystem V2/build/
 /06-Code/ViveresPedroSystem V2/nbproject/private/
+/06-Code/ViveresPedroSystem V2/dist/
