--- a/06-Code/ViveresPedro/nbproject/private/private.properties
+++ b/06-Code/ViveresPedro/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\usuario\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\USER\\AppData\\Roaming\\NetBeans\\13\\build.properties
