--- a/06-Code/ViveresPedroSystem V2/nbproject/project.properties
+++ b/06-Code/ViveresPedroSystem V2/nbproject/project.properties
@@ -35,9 +35,19 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ViveresPedroSystem
 endorsed.classpath=
 excludes=
+file.reference.ApiAlpha.jar=C:\\Downloads\\librerias\\ApiAlpha.jar
+file.reference.Bson.jar=C:\\Downloads\\librerias\\Bson.jar
+file.reference.MongodbDriverCore.jar=C:\\Downloads\\librerias\\MongodbDriverCore.jar
+file.reference.MongoJavaDriver.jar=C:\\Downloads\\librerias\\MongoJavaDriver.jar
+file.reference.NopAlpha.jar=C:\\Downloads\\librerias\\NopAlpha.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.ApiAlpha.jar}:\
+    ${file.reference.Bson.jar}:\
+    ${file.reference.MongoJavaDriver.jar}:\
+    ${file.reference.MongodbDriverCore.jar}:\
+    ${file.reference.NopAlpha.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
