--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /06-Code/ViveresPedroSystem V2/build/
 /06-Code/ViveresPedroSystem V2/nbproject/private/
 /06-Code/ViveresPedroSystem V2/dist/
+/06-Code/ViveresPedroSystem V3/nbproject/private/
+/06-Code/ViveresPedroSystem V3/build/
