--- a/06-Code/ViveresPedroSystem V2/nbproject/project.properties
+++ b/06-Code/ViveresPedroSystem V2/nbproject/project.properties
@@ -83,7 +83,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ViveresPedroSystem
-main.class=ec.edu.espe.codeproject.view.ViveresPedro
+main.class=ec.edu.espe.codeproject.view.FrmWelcome
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
