--- a/06-Code/ViveresPedroSystem/nbproject/project.properties
+++ b/06-Code/ViveresPedroSystem/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ViveresPedroSystem
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=C:\\Downloads\\AbsoluteLayout.jar
 file.reference.gson-2.9.0.jar=C:\\Downloads\\StylesIrelia\\lib\\gson-2.9.0.jar
 file.reference.jcalendar-1.4.jar=C:\\Downloads\\StylesIrelia\\lib\\jcalendar-1.4.jar
 file.reference.mongo-java-driver-3.12.11.jar=lib/mongo-java-driver-3.12.11.jar
@@ -42,9 +43,9 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mongo-java-driver-3.12.11.jar}:\
-    ${libs.absolutelayout.classpath}:\
     ${file.reference.gson-2.9.0.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
