--- a/06-Code/ViveresPedroSystem/nbproject/project.properties
+++ b/06-Code/ViveresPedroSystem/nbproject/project.properties
@@ -35,17 +35,17 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ViveresPedroSystem
 endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout.jar=C:\\Downloads\\AbsoluteLayout.jar
-file.reference.gson-2.9.0.jar=C:\\Downloads\\StylesIrelia\\lib\\gson-2.9.0.jar
-file.reference.jcalendar-1.4.jar=C:\\Downloads\\StylesIrelia\\lib\\jcalendar-1.4.jar
-file.reference.mongo-java-driver-3.12.11.jar=lib/mongo-java-driver-3.12.11.jar
+file.reference.AbsoluteLayout.jar=C:\\Users\\usuario\\Downloads\\Nueva carpeta (2)\\ViveresPedroSystem\\lib\\AbsoluteLayout.jar
+file.reference.gson-2.9.0.jar=C:\\Users\\usuario\\Downloads\\Nueva carpeta (2)\\ViveresPedroSystem\\lib\\gson-2.9.0.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\usuario\\Downloads\\Nueva carpeta (2)\\ViveresPedroSystem\\lib\\jcalendar-1.4.jar
+file.reference.mongo-java-driver-3.12.11.jar=C:\\Users\\usuario\\Downloads\\Nueva carpeta (2)\\ViveresPedroSystem\\lib\\mongo-java-driver-3.12.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mongo-java-driver-3.12.11.jar}:\
+    ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.gson-2.9.0.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.AbsoluteLayout.jar}
+    ${file.reference.mongo-java-driver-3.12.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
