--- a/06-Code/ViveresPedroSystem/nbproject/project.properties
+++ b/06-Code/ViveresPedroSystem/nbproject/project.properties
@@ -38,6 +38,7 @@ excludes=
 file.reference.AbsoluteLayout.jar=C:\\Downloads\\AbsoluteLayout.jar
 file.reference.gson-2.9.0.jar=C:\\Downloads\\StylesIrelia\\lib\\gson-2.9.0.jar
 file.reference.jcalendar-1.4.jar=C:\\Downloads\\StylesIrelia\\lib\\jcalendar-1.4.jar
+file.reference.junit-4.3.jar=C:\\Users\\USER\\Desktop\\POO EDISON\\EXAM\\junit-4.3.jar
 file.reference.mongo-java-driver-3.12.11.jar=lib/mongo-java-driver-3.12.11.jar
 includes=**
 jar.compress=false
@@ -45,7 +46,8 @@ javac.classpath=\
     ${file.reference.mongo-java-driver-3.12.11.jar}:\
     ${file.reference.gson-2.9.0.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.AbsoluteLayout.jar}
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.junit-4.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
