--- a/06-Code/ViveresPedroSystem/nbproject/project.properties
+++ b/06-Code/ViveresPedroSystem/nbproject/project.properties
@@ -1,18 +1,24 @@
 #Mon Jul 25 06:59:15 COT 2022
 =\=\=\=\=\=\=
-file.reference.AbsoluteLayout.jar=C\:\\Users\\usuario\\Downloads\\Nueva carpeta (2)\\ViveresPedroSystem\\lib\\AbsoluteLayout.jar
 excludes=
+file.reference.AbsoluteLayout.jar=lib/AbsoluteLayout.jar
+file.reference.gson-2.9.0.jar=lib/gson-2.9.0.jar
+file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar
+file.reference.mongo-java-driver-3.12.11.jar-1=lib/mongo-java-driver-3.12.11.jar
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.junit_4.classpath}:\
     ${libs.hamcrest.classpath}
-run.classpath=${javac.classpath}\:${build.classes.dir}
-javac.processorpath=${javac.classpath}
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
+javac.processorpath=\
+    ${javac.classpath}
 dist.javadoc.dir=${dist.dir}/javadoc
 test.src.dir=test
-file.reference.gson-2.9.0.jar=C\:\\Users\\usuario\\Downloads\\Nueva carpeta (2)\\ViveresPedroSystem\\lib\\gson-2.9.0.jar
-run.modulepath=${javac.modulepath}
+run.modulepath=\
+    ${javac.modulepath}
 annotation.processing.enabled=true
 build.sysclasspath=ignore
 debug.modulepath=${run.modulepath}
@@ -45,14 +51,20 @@ javac.processormodulepath=
 run.jvmargs=
 jlink.additionalmodules=
 javadoc.encoding=${source.encoding}
-javac.classpath=${file.reference.AbsoluteLayout.jar}\:${file.reference.gson-2.9.0.jar}\:${file.reference.jcalendar-1.4.jar}\:${file.reference.junit-4.3.jar}\:${file.reference.mongo-java-driver-3.12.11.jar-1}
+javac.classpath=\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.gson-2.9.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mongo-java-driver-3.12.11.jar-1}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.junit_5.classpath}
 ${file.reference.AbsoluteLayout.jar}=${file.reference.junit-4.3.jar}
 mkdist.disabled=false
-run.test.modulepath=${javac.test.modulepath}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 build.classes.excludes=**/*.java,**/*.form
 dist.jlink.dir=${dist.dir}/jlink
 dist.jar=${dist.dir}/ViveresPedroSystem.jar
-file.reference.jcalendar-1.4.jar=C\:\\Users\\usuario\\Downloads\\Nueva carpeta (2)\\ViveresPedroSystem\\lib\\jcalendar-1.4.jar
 build.classes.dir=${build.dir}/classes
 debug.test.modulepath=${run.test.modulepath}
 build.test.classes.dir=${build.dir}/test/classes
@@ -66,18 +78,19 @@ build.generated.dir=${build.dir}/generated
 javadoc.version=false
 >>>>>>>=8233c0c638c68f287fb378e46517418739dce4fd
 application.title=ViveresPedroSystem
-javac.test.modulepath=${javac.modulepath}
+javac.test.modulepath=\
+    ${javac.modulepath}
 debug.test.classpath=${run.test.classpath}
 javac.external.vm=true
 javac.target=17
-file.reference.mongo-java-driver-3.12.11.jar-1=C\:\\Downloads\\lib\\mongo-java-driver-3.12.11.jar
 platform.active=default_platform
-file.reference.junit-4.3.jar=C\:\\Users\\USER\\Desktop\\POO EDISON\\EXAM\\junit-4.3.jar
 manifest.file=manifest.mf
 javadoc.html5=false
 javac.test.processorpath=${javac.test.classpath}
 meta.inf.dir=${src.dir}/META-INF
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 dist.jlink.output=${dist.jlink.dir}/ViveresPedroSystem
 annotation.processing.run.all.processors=true
 javac.modulepath=
