--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /06-Code/ViveresPedroSystem V3/build/
 /06-Code/ViveresPedroSystem V4/build/
 /06-Code/ViveresPedroSystem V4/nbproject/private/
+/06-Code/ViveresPedroSystem/dist/
